[pgr] fix (gallery.scss): hover+1px, prevent content subpixel overflow in scale

--- a/pro-gallery-renderer/src/components/styles/gallery.scss
+++ b/pro-gallery-renderer/src/components/styles/gallery.scss
@@ -1018,10 +1018,10 @@
           &:before {
             content: ' ';
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: -1px;
+            left: -1px;
+            width: calc(100% + 2px);
+            height: calc(100% + 2px);
             margin: 0;
             box-sizing: border-box;
             z-index: -1;
